# verge-browser

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release-node.yml
apps/admin-web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/admin-web/src/: App.tsx  main.tsx  styles.css
apps/api-server/app/: config.py  deps.py  main.py
apps/runtime-xpra/openbox/: rc.xml
apps/runtime-xpra/scripts/: healthcheck.sh  start_all.sh  (+3 more)
deployments/: docker-compose.yml
docker/: api-server.Dockerfile  runtime-image.Dockerfile  runtime-xpra.Dockerfile  runtime-xvfb.Dockerfile
docker/runtime/: Dockerfile
docs/: api.md  cli-sdk.md  env.md  open-source-compliance.md  tech-0311.md  tech.md  todo.md  vnc_clipboard.md
docs/idea/: req.md  t1.md  t2.md  tech1.md  tech2.md
examples/: human_handoff.py  playwright_connect_over_cdp.py
skills/verge-browser-deploy/: SKILL.md
skills/verge-browser-usage/: SKILL.md
tests/: conftest.py
tests/integration/: test_runtime_api.py
tests/scripts/: _common.sh  browser-smoke.sh  cleanup-sandbox.sh  create-sandbox.sh  debug-fcitx.sh  files-smoke.sh  full-manual-tour.sh  get-session-url.sh  get-vnc-url.sh  restart-browser.sh
tests/unit/: test_api.py  test_browser.py  test_browser_fallback_cdp.py  test_clipboard.py  test_config.py  test_docker_adapter.py  test_lifecycle.py  test_lifecycle_persistence.py  test_registry_persistence.py  test_sdk_cli.py  test_session.py  test_tickets.py  test_vnc.py
(+43 files in other folders)
